# vnpt-haha

./: .gitignore  README.md  README_SUPABASE.md  app.py  main.py  pyproject.toml
data/crawl/: Adolf_Hitler__Wikipedia_tieng_Viet.txt  Am_thuc_Hai_Phong__Wikipedia_tieng_Viet.txt  Am_thuc_Viet_Nam__Wikipedia_tieng_Viet.txt  An_Duong_Vuong__Wikipedia_tieng_Viet.txt  Ariana_Grande__Wikipedia_tieng_Viet.txt  Banh_hoi__Wikipedia_tieng_Viet.txt  Banh_mi_Viet_Nam__Wikipedia_tieng_Viet.txt  Ben_Nha_Rong__Wikipedia_tieng_Viet.txt  Benh_tim_mach__Wikipedia_tieng_Viet.txt  Benh_vien_Dai_hoc_Y_Duoc,_Dai_hoc_Quoc_gia_Ha_Noi__Wikipedia_tieng_Viet.txt  Bo_Giao_duc_va_Dao_tao__Wikipedia_tieng_Viet.txt  Bo_Quoc_phong_(Viet_Nam)__Wikipedia_tieng_Viet.txt  Bun__Wikipedia_tieng_Viet.txt  Ca_Mau__Wikipedia_tieng_Viet.txt  Cac_dang_chinh_phu__Wikipedia_tieng_Viet.txt  Cac_giai_doan_phat_trien_tam_ly_xa_hoi_cua_Erikson__Wikipedia_tieng_Viet.txt  Cac_nuoc_cong_hoa_cua_Lien_bang_Xo_viet__Wikipedia_tieng_Viet.txt  Cach_mang_Thang_Tam__Wikipedia_tieng_Viet.txt  Cai_cach_giao_duc_o_Viet_Nam__Wikipedia_tieng_Viet.txt  Carbohydrat__Wikipedia_tieng_Viet.txt  Cau_chuyen_do_choi__Wikipedia_tieng_Viet.txt  (+218 more)
docker/: .dockerignore  Dockerfile  entrypoint.sh
output/: inference_log.jsonl  submission.csv
scripts/: clean_html.py  crawl.py  crawl_website.py  docker_build_image.sh  docker_run_container.sh  extract_category_links.py  ingest.py  ingest_data.py  process_wiki.py  run_links_crawl.py
src/: config.py  graph.py  pipeline.py  state.py
test_data/: public_test.csv
test_output/: pred.csv
(+24 files in other folders)
